fix scrollbar, update image

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,9 +4,24 @@
     --header-height: var(--header-nav-height) + var(--header-top-height);
     --text-color: #6e6d7a;
     --primary-color: #016735;
-    --second-color: #CA965C;
-    --third-color: #EEC373;
+    --second-color: #02B35C;
     --fourth-color: #F4DFBA;
+    --navbar-color: #519259;
+}
+
+/* Scrollbar */
+*::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar {
+	width: 7px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: var(--navbar-color);
 }
 
 * {
